use 'getFirst()'